fix(CodeBlock): header title should collapse

--- a/easy-ui-react/src/CodeBlock/CodeBlock.module.scss
+++ b/easy-ui-react/src/CodeBlock/CodeBlock.module.scss
@@ -25,6 +25,11 @@
   color: component-token("card-header", "color");
 }
 
+.headerTitle {
+  flex: 1;
+  @include font-style("subtitle1");
+}
+
 .divider {
   align-self: stretch;
   display: inline-flex;
